--- a/app/src/main/res/layout/fragment_adm_funcionarios_lista.xml
+++ b/app/src/main/res/layout/fragment_adm_funcionarios_lista.xml
@@ -5,21 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".view.adm.ui.funcionarios.FuncionariosCadastradosFragment">
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
         android:background="@drawable/background_search"
         android:queryHint="Digite o nome do funcionário" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/background_search"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cargo: " />
+
+        <Spinner
+            android:id="@+id/cargosSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/totalTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end" />
 
     <TextView
         android:id="@+id/statusFuncionariosTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Carregando lista de funcionários..." />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/funcionariosRecyclerView"
