--- a/app/src/main/res/drawable/selector_textview.xml
+++ b/app/src/main/res/drawable/selector_textview.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@android:color/darker_gray" android:state_focused="true" />
-    <item android:drawable="@android:color/darker_gray" android:state_pressed="true" />
-    <item android:drawable="@android:color/black" />
+    <item android:drawable="@color/colorAccent" android:state_focused="true" />
+    <item android:drawable="@color/colorAccent" android:state_pressed="true" />
+    <item android:drawable="@android:color/white" />
 
 </selector>
